hive-macro/tests/macro/hive/should_fail/attribute_disallowed.rs
#[hive_macro::hive(disallowed_attribute = 1)]
mod tests {}

fn main() {}
